# MyMODMngr

./: .gitignore  .gitmodules  BUILD_CONSOLIDATION_SUMMARY.md  BUILD_DISCREPANCY_ANALYSIS.md  BUILD_DISCREPANCY_FIX_SOLUTION.md  BUILD_INSTRUCTIONS.md  BUILD_SYSTEM.md  CI_CD_ERROR_FIXES.md  COPY_STEP_FIX.md  CRITICAL_ISSUES_ANALYSIS.md  DEBUG_SESSION_SUMMARY.md  DIRECTORY_FIX_SOLUTION.md  DISCORD_ANNOUNCEMENT_v0.3.0.txt  FEATURE_SUMMARY.md  FINAL_PATH_FIX.md  FINAL_SCRIPT_FIX.md  FINAL_SOLUTION_SUMMARY.md  FINAL_SUCCESS_SOLUTION.md  FIXES_SUMMARY.md  NEXUS_API_KEY_USAGE.md  NXM_DOWNLOAD_COMPLETE_CODE_FLOW.md  NXM_DOWNLOAD_FLOW.md  NXM_FIX_SUMMARY.md  NXM_PROTOCOL_FIX.md  NXM_TEST_FEATURE.md  PAK_EXTRACTION_README.md  PATH_AND_DEBUG_FIX.md  README.md  RELEASE_NOTES_DRAFT.md  SETTINGS_REFACTOR_COMPLETE.md  SPEC_FILE_SOLUTION.md  TESTING_GUIDE.md  aes_mapping_example.json  build_cicd.sh  build_complete.bat  build_complete.sh  build_local.bat  build_local.sh  build_rust_libs.bat  build_rust_libs.sh  (+19 more)
.github/workflows/: release.yml  release_template.md
core/: __init__.py
core/api/: characters.py  dependencies.py  server.py
core/assets/: __init__.py  zip_to_asset_paths.py
core/config/: settings.py
core/db/: __init__.py  conflicts.py  db.py  queries.py
core/extraction/: __init__.py  marvel_rivals_ids.py  service.py
core/ingestion/: __init__.py  scan_active_mods.py  scan_mod_downloads.py
core/nexus/: __init__.py  nexus_api.py  nxm.py
core/utils/: archive.py  bbcode_wrapper.py  download_paths.py  mod_filename.py  nexus_metadata.py  nxm_protocol.py  pak_files.py  ue_files_extractor.py
extracted_wheel/rust_ue_tools/: __init__.py
extracted_wheel/rust_ue_tools-0.1.0.dist-info/: METADATA  RECORD
python_libs/: rust_ue_tools.py
scripts/: activate_mods.py  backfill_pak_mod_ids.py  build_asset_tags.py  build_pak_tags.py  check_tags.py  conflicts_refresh.py  deactivate_mods.py  demo_conflict_views.py  demo_conflicts.py  demo_nxm_download.py  demo_queries.py  export_changelogs.py  image_api_test.py  import_downloads.py  ingest_download_assets.py  ingest_from_rar7z.py  inspect_db.py  inspect_pak_backfill.py  install_psutil.py  normalize_local_download_paths.py  normalize_local_downloads.py  nxm_handler.py  nxm_last_uri.txt  query_changelogs_view.py  rebuild_sqlite.py  rebuild_tags.py  register_nxm_handler.py  register_nxm_protocol.reg  register_nxm_tauri.reg  report_missing_tags.py  resync_local_downloads_created_at.py  setup_nxm_handler.py  sync-version.js  sync_nexus_to_db.py  tag_assets.py  test_byname_flow.py  test_download_formats.py  test_tag_logic.py  test_tauri_db_path.py  verify_dynamic_paths.py  (+1 more)
src/: App.tsx  index.css
src-python/: run_server.py
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/rust-ue-tools/: Cargo.toml  README.md
src-tauri/src/rust-ue-tools/examples/: advanced_usage.rs  basic_usage.rs
src-tauri/src/rust-ue-tools/oodle_loader/: Cargo.toml
src-tauri/src/rust-ue-tools/oodle_loader/src/: lib.rs
src-tauri/src/rust-ue-tools/repak/: Cargo.toml
src-tauri/src/rust-ue-tools/repak/src/: lib.rs
src-tauri/src/rust-ue-tools/src/: lib.rs
src/components/: AccentColorPicker.tsx  ActiveModsPanel.tsx  ActiveModsView.tsx  ActivityFeed.tsx  AddModModal.tsx  AdvancedFilterPanel.tsx  AnimatedCounter.tsx  AppHeader.tsx  BrowsePage.tsx  BulkOperationsToolbar.tsx  CharacterBrowser.tsx  CommandPalette.tsx  ConflictDashboard.tsx  DownloadsPage.tsx  DownloadsSidebar.tsx  GetStartedDialog.tsx  ImageCarousel.tsx  InstalledModCard.tsx  LoadoutManager.tsx  ModCard.tsx  ModCompare.tsx  ModConflictModal.tsx  ModHealthMonitor.tsx  ModModal.tsx  NSFWFilterProvider.tsx  Navigation.tsx  NotificationCenter.tsx  NxmBackgroundListener.tsx  NxmHandoffPrompt.tsx  NxmProtocolSettings.tsx  Sidebar.tsx  (+15 more)
(+45 files in other folders)
