[package]
name = "rivalnxt"
version = "0.1.0"
edition = "2021"
description = "Desktop shell for RivalNxt"
license = "MIT"
resolver = "2"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.0", features = [] }
tauri-plugin-shell = { version = "2.0.2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.4.2"
rfd = "0.15.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = []
