[package]
name = "rust-ue-tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_ue_tools"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
indicatif = "0.17"

# IO and filesystem
fs-err = "2.10"
path-clean = "0.1"
path-slash = "0.1"
glob = "0.3"
walkdir = "2.4"

# Archive handling
zip = "0.6"

# Crypto
aes = "0.8"
base64 = "0.21"
hex = "0.4"
sha1 = "0.10"
strum = { version = "0.25", features = ["derive"] }

# Additional dependencies
tempfile = "3.8"

# Compression and hashing
sha2 = "0.10"

# Binary serialization
bitflags = "2.4"
typed-path = "0.6"

# PyO3 bindings for Python integration
pyo3 = { version = "0.22", features = ["abi3"] }

# UE file processing libraries
repak = { path = "repak", features = ["oodle"] }
retoc = { path = "retoc-rivals" }

# CLI dependencies
clap = { version = "4.0", features = ["derive", "cargo"] }

[features]
default = []
python-bindings = []
pyo3 = []

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true

[dev-dependencies]
tempfile = "3.8"
walkdir = "2.4"

[[bin]]
name = "ue-tools"
path = "src/main.rs"

[[bin]]
name = "repak"
path = "src/bin/repak.rs"

[[bin]]
name = "retoc"
path = "src/bin/retoc.rs"