[package]
name = "repak"
version = "0.1.0"
edition = "2021"
authors = ["RivalNxt"]
repository = "https://github.com/rivalnxt/rivalnxt"
license = "MIT"


[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"


[features]
default = ["compression", "encryption"]
compression = ["dep:flate2", "dep:zstd", "dep:lz4_flex"]
oodle = ["dep:oodle_loader", "compression"]
encryption = ["dep:aes"]

[dependencies]
byteorder = "1.5"
aes = { version = "0.8", optional = true }
flate2 = { version = "1.1", optional = true }
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11.3", optional = true }
oodle_loader = { path = "../oodle_loader", optional = true}
thiserror = "2.0"
sha1 = "0.10"
strum = { version = "0.26", features = ["derive"] }
hex = "0.4"
blake3 = "1.8.2"
base64 = "0.21"

[dev-dependencies]
base64 = "0.21"
paste = "1.0.15"

